[gd_scene load_steps=4 format=3 uid="uid://ck5n2h8hv5wuu"]

[ext_resource type="Script" path="res://Scripts/HiddenChoice.gd" id="1_pym54"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmu30"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypnn1"]
bg_color = Color(0.881162, 0.301501, 0.170494, 1)

[node name="HiddenChoice" type="Control"]
layout_mode = 3
anchor_left = 0.016
anchor_top = 0.029
anchor_right = 0.734
anchor_bottom = 0.7
offset_left = -0.304
offset_top = -0.0599999
offset_right = -0.446014
offset_bottom = 16.0
script = ExtResource("1_pym54")

[node name="HiddenChoice_Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.142
anchor_bottom = 0.144
offset_right = 0.264648
offset_bottom = 0.333435
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qmu30")

[node name="HiddenChoice_Quantity" type="LineEdit" parent="HiddenChoice_Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 72.0
offset_right = 147.0
offset_bottom = 103.0
placeholder_text = "Quantity"

[node name="OptionBox_HiddenChoice_Condition" type="OptionButton" parent="HiddenChoice_Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 189.0
offset_bottom = 37.0
selected = 0
item_count = 3
popup/item_0/text = "HAS"
popup/item_1/text = "HAS_UNIQUE_ITEM"
popup/item_1/id = 1
popup/item_2/text = "CREW"
popup/item_2/id = 2

[node name="OptionChoice_HiddenChoice_Condition" type="OptionButton" parent="HiddenChoice_Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 41.0
offset_right = 189.0
offset_bottom = 69.0

[node name="Button_Clear_HiddenChoice" type="Button" parent="HiddenChoice_Panel"]
layout_mode = 0
offset_left = 152.0
offset_top = 75.0
offset_right = 193.0
offset_bottom = 101.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ypnn1")
text = "Clear"

[connection signal="item_selected" from="HiddenChoice_Panel/OptionBox_HiddenChoice_Condition" to="." method="_on_option_box_hidden_choice_condition_item_selected"]
[connection signal="button_up" from="HiddenChoice_Panel/Button_Clear_HiddenChoice" to="." method="_on_button_clear_hidden_choice_button_up"]
